--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3"
   },
